Issue #129 Keep templates user-focused; AGENTS for contributors